# benevisrdl

./: CONTRIBUTING.md  README.md  REUSE.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
rdl2ot/: README.md  pyproject.toml
rdl2ot/src/rdl2ot/: __main__.py  __peakrdl__.py  cli.py  export_rtl.py  opentitan.py  rtl_exporter.py
rdl2ot/src/templates/: reg_pkg.sv.tpl  reg_top.sv.tpl
rdl2ot/tests/: test_rdl2ot.py
rdl2ot/tests/snapshots/: lc_ctrl_dmi_reg_top.sv  lc_ctrl_reg_pkg.sv  lc_ctrl_regs_reg_top.sv  uart_reg_pkg.sv  uart_reg_top.sv
rdlexporter/: README.md  pyproject.toml
rdlexporter/src/rdlexporter/: __init__.py  exporter.py
rdlexporter/tests/: test_rdl-exporter.py
rdlexporter/tests/snapshots/: generic.rdl
src/rdl2ot/: __main__.py  cli.py  export_json.py  export_rtl.py  opentitan.py
src/templates/: reg_pkg.sv.tpl  reg_top.sv.tpl
tests/: test_rdl2ot.py
tests/snapshots/: lc_ctrl.rdl  lc_ctrl_reg_top.sv  uart_reg_top.sv
