[project]
name = "benevisrdl"
version = "0.0.0"
description = "Houses PeakRDL pluggins."
requires-python = ">=3.10"
readme = "README.md"        # Path to your README file
license = { file = "LICENSE" } # Path to your LICENSE file
dependencies = [
  "uv==0.6.1",
  "isort==5.10.1",
  "yapf==0.32.0",
  "click>=8.2.1",
  "jinja2>=3.1.6",
  "peakrdl>=1.4.0",
]
[project.optional-dependencies]
linting = [
  "ruff>=0.9.6",
  "mypy==0.971",
  "flake8 ~= 7.1",
]
dev = [
  "pytest>=8.4.1",
  "hatch>=1.4.1",
  "twine>=6.1.0",
  "build>=1.2.2",
]
ci = ["benevisrdl[linting,dev]"]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = ["E", "E303", "W391"]

[tool.uv.workspace]
members = [ "rdl2ot", "rdlexporter"]
