# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "benevisrdl"
version = "0.1.0"
description = "Houses PeakRDL pluggins."
requires-python = ">=3.10"
readme = "README.md"      
license = { file = "LICENSE" }
dependencies = [
]

[project.optional-dependencies]
linting = [
  "pyright>=1.1.403",
  "ruff>=0.9.6",
]
dev = [
  "pytest>=8.4.1",
  "twine>=6.1.0",
  "uv-build>=0.8.4",
]
ci = ["benevisrdl[linting,dev]"]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["ALL"]
extend-select = ["W391", "E303"]
allowed-confusables = ["−"]
ignore = [
    "D203", "D213", "COM812", "ISC001", "FIX", "TD", "T201", "S101", "C901", "D401",
    "PLR0911", "PLR0915", "INP001", "RUF012", "EXE001", "S701", "FBT001", "FBT002"
]

[tool.uv.workspace]
members = [ "rdl2ot", "rdlexporter"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
