[project]
name = "rdlexporter"
version = "0.1.6"
description = "Library to export rdl files"
requires-python = ">=3.10"
keywords = ["SystemRDL", "library", "exporter"]
readme = "README.md"
dependencies = [
  "peakrdl>=1.4.0",
]

authors = [
    { name = "lowRISC contributors"},
]

[project.urls]
Homepage = "https://github.com/lowrisc/benevisrdl"
Issues = "https://github.com/lowrisc/benevisrdl/issues"
Documentation = "https://github.com/lowrisc/benevisrdl"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src"]
reportMissingImports = "error"
reportMissingTypeStubs = false
venv = ".venv"
executionEnvironments = [
    { root = "src" },
]
